@@ -1,3 +1,8 @@
+2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>
+
+	* src/display_playlists.c (pm_add_child): when adding
+          playlists to the end, don't add behind the Photo item.
+
 2008-07-18 P.G. Richardson <phantom_sf at users.sourceforge.net>
 
 	* src/file.c (get_track_info_from_file): 
